edit: API card catalog
